<resources>
    <string name="app_name">Recycler Calendar Example</string>
    <string name="week_calendar">Week Calendar</string>
    <string name="month_calendar">Month Calendar</string>
    <string name="page_month_calendar">Page Calendar</string>
    <string name="text_selected_date">Selected Date</string>
    <string name="simple_calendar">Simple Calendar</string>
    <string name="example">Example</string>
    <string name="selection_mode">Selection Mode</string>
    <string name="none">None</string>
    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="range">Range</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="calendar_icon_license">Calendar Icon made by Freepik from www.flaticon.com</string>
    <string name="infinite_calendar">Infinite Calendar</string>
    <string name="text_orientation">Orientation</string>
</resources>
