<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".simple.SimpleRecyclerCalendarActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/simple_calendar"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/selection_mode"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:typeface="monospace" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioSelectionNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/radioSelectionSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single" />

        <RadioButton
            android:id="@+id/radioSelectionMultiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiple" />

        <RadioButton
            android:id="@+id/radioSelectionRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/range" />

    </RadioGroup>

    <com.tejpratapsingh.recyclercalendar.views.SimpleRecyclerCalendarView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>