<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonWeekCalendarActivity"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/week_calendar"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonMonthCalendarActivity"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/month_calendar"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonPageCalendarActivity"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/page_month_calendar"
            android:textStyle="bold"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>