<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".simple.InfiniteRecyclerCalendarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/infinite_calendar"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:typeface="monospace" />

        <ImageButton
            android:id="@+id/buttonSimpleSettings"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_setting"
            android:tint="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSettingContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_orientation"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:typeface="monospace" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioViewTypeVertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/vertical" />

            <RadioButton
                android:id="@+id/radioViewTypeHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horizontal" />

        </RadioGroup>
    </LinearLayout>

    <com.tejpratapsingh.recyclercalendar.views.InfiniteRecyclerCalendarView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>